<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/messenger"
        android:icon="@drawable/bot_menu_ic_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/messenger_title"
        />
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/bot_menu_ic_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/calendar_title"
        />
    <item
        android:id="@+id/files"
        android:icon="@drawable/bot_menu_ic_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/files_title" />
</menu>